--- a/css/main.css
+++ b/css/main.css
@@ -274,7 +274,7 @@ a:hover, a:focus {
    Main styles
    ========================================================================== */
 header {
-  background: url("https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/img/header-bg.jpg") no-repeat center center;
+  background: url("https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/header-bg.jpg") no-repeat center center;
   width: 100%;
   padding: 20px 10px 60px 10px;
   height: 100vh;
@@ -405,7 +405,7 @@ header {
 
 
 #bg {
-  background: url("https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/img/bg.jpg") #231f20 no-repeat center center fixed;
+  background: url("https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/bg.jpg") #231f20 no-repeat center center fixed;
   min-height: 300px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -465,12 +465,12 @@ hr.line {
 
 .contactIcon3 {
   position: relative;
-  top:2px;
+  top:-23px;
   left:-150px;
 }
 
 /* Landscape phone to portrait tablet */
-@media (min-width: 300px) and (max-width: 700px) {
+@media (min-width: 300px) and (max-width: 450px) {
   .contactIcon1 {
     position: relative;
     top:25;
@@ -484,8 +484,46 @@ hr.line {
 
   .contactIcon3 {
     position: relative;
-    top:2px;
+    top:-23px;
     left:-50px;
+  }
+}
+
+@media (min-width: 451px) and (max-width: 1000px) {
+  .contactIcon1 {
+    position: relative;
+    top:25;
+    left:90px;
+  }
+
+  .contactIcon2 {
+    position: relative;
+    top:25;
+  }
+
+  .contactIcon3 {
+    position: relative;
+    top:-23px;
+    left:-90px;
+  }
+}
+
+@media (min-width: 1001px) and (max-width: 2000px) {
+  .contactIcon1 {
+    position: relative;
+    top:25;
+    left:90px;
+  }
+
+  .contactIcon2 {
+    position: relative;
+    top:25;
+  }
+
+  .contactIcon3 {
+    position: relative;
+    top:-23px;
+    left:-90px;
   }
 }
 
@@ -580,7 +618,7 @@ footer {
 }
 
 .headline {
-  background: url("https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/img/bg2.jpg") #231f20 no-repeat center center fixed;
+  background: url("https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/bg2.jpg") #231f20 no-repeat center center fixed;
   color: #FFFFFF;
   padding: 10px;
   border-top-left-radius: 10px;
