Added skills section, updated contact section, updated publication section and removed contact form

--- a/css/main.css
+++ b/css/main.css
@@ -540,6 +540,9 @@ footer {
 
 /*---------------Service Tables-------------------*/
 
+#skills {
+  background: #69a1bc;
+}
 
 #service {
   background: #69a1bc;
@@ -605,6 +608,12 @@ footer {
 .headline {
   background: url("https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/bg2.jpg") #231f20 no-repeat center center fixed;
   color: #FFFFFF;
+  padding: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.headline2 {
   padding: 10px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
