--- a/css/main.css
+++ b/css/main.css
@@ -471,8 +471,7 @@ hr.line {
 
   .contactIcon3 {
     position: relative;
-    top:2px;
-    left:-50px;
+    top:25;
   }
 
   .landing-btns.row {
@@ -494,8 +493,7 @@ hr.line {
 
   .contactIcon3 {
     position: relative;
-    top:-23px;
-    left:-90px;
+    top:25;
   }
 }
 
@@ -514,8 +512,7 @@ hr.line {
 
   .contactIcon3 {
     position: relative;
-    top:2px;
-    left:-150px;
+    top:25;
   }
 }
 
