--- a/css/main.css
+++ b/css/main.css
@@ -625,7 +625,7 @@ footer {
 }
 
 .headline {
-  background: url("https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/bg2.jpg") #231f20 no-repeat center center fixed;
+  background: url("https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/bg2.jpg") no-repeat center center fixed;
   color: #FFFFFF;
   padding: 10px;
   border-top-left-radius: 10px;
