--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ h3 {
   line-height: 26px;
   color: #ffffff;
   font-weight: 600;
-  text-shadow: 0px 0px 2px #555;
+  text-shadow: 1px 1px 2px black, 0 0 1em grey, 0 0 0.2em grey;
 }
 
 p {
